--- a/www/css/ionic.app.css
+++ b/www/css/ionic.app.css
@@ -26,6 +26,10 @@ $dark:                            #444 !default;
   used under CC BY http://creativecommons.org/licenses/by/4.0/
   Modified icons to fit ionicon’s grid from original.
 */
+.login-bg {
+  background: url("../img/bg/mountain.jpg") no-repeat center;
+  background-size: 100% 100%; }
+
 @font-face {
   font-family: "Ionicons";
   src: url("../lib/ionic/fonts/ionicons.eot?v=2.0.1");
