--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -5,7 +5,7 @@
 
 
 
-<ion-view view-title="Home" cache-view="false">
+<ion-view view-title="Home" cache-view="false" hideBackButton ="true">
  <ion-nav-buttons side="right">
             <button class="button" ng-disabled="isToday()" ng-click="today()">Today</button>
             <button class="button" ng-click="changeMode('month')">M</button>
