--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -5,10 +5,12 @@
       <h1>
         <img src="img/logo.png" width="120px">
       </h1>
-      <h2 class="light">Fanbase</h2>
-      <p class="light">Made For Fans</p>
+      <h2 class="light">Mosh Fitness</h2>
+      <h1 class="light">Diary</h1>
     </div>
-
+    <div ng-show="errors">
+      <p class="error" ng-repeat="error in errors" style="text-align: center;"><b><big> {{error.msg}}</big></b></p>
+    </div>
     <!-- Signup form -->
     <form name="signup_form" class="form-container" novalidate>
     <div class="list list-inset transparent-form">
@@ -23,6 +25,10 @@
       <label class="item item-input">
         <i class="ion-ios-locked-outline light icon-label"></i>
         <input type="password" placeholder="Password" ng-model="data.password" required>
+      </label>
+      <label class="item item-input">
+        <i class="ion-ios-locked-outline light icon-label"></i>
+        <input type="text" placeholder="Location" ng-model="data.location" required>
       </label>
     </div>
     <div class="padding">
