--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -5,29 +5,28 @@
 
 
 
-<ion-view view-title="Home" cache-view="false" hideBackButton ="true">
+<ion-view view-title="{{viewTitle}}" cache-view="false" hideBackButton ="true">
  <ion-nav-buttons side="right">
             <button class="button" ng-disabled="isToday()" ng-click="today()">Today</button>
             <button class="button" ng-click="changeMode('month')">M</button>
             <button class="button" ng-click="changeMode('week')">W</button>
             <button class="button" ng-click="changeMode('day')">D</button>
-            <button class="button" ng-click="loadEvents()">Load Events</button>
+            <button class="button" ng-click="addevent(selectedTime);">+ Add New Task</button>
         </ion-nav-buttons>
-
-        <ion-content scroll="false" class="main-content">  
-            
-            <h5 style="text-align: center;">{{viewTitle}}</h5>
+<div style="text-align: center; margin-top: 50px;"><h4>{{viewTitle}}</h4>
+       
+       </div>
+        <ion-content scroll="false" class="main-content"> 
          
 <calendar ng-model="calendar.currentDate" calendar-mode="calendar.mode" event-source="calendar.eventSource"
                       range-changed="reloadSource(startTime, endTime)"
                       event-selected="onEventSelected(event)" title-changed="onViewTitleChanged(title)"
                       time-selected="onTimeSelected(selectedTime, events, disabled)" step="30"></calendar>
-      
-  <div style="position: absolute; bottom: 0px; width: 100%">
-        <div style="text-align: center">
-			<h5 style="background-color:#323232; color:#ffffff; padding: 5px; margin-bottom: -1%;"> Tasks for: {{chosen | date:"EEE,d, MMM y"}}</h5>
-          <button class="button button-block button-positive" ng-click="addevent(selectedTime);">Add a New Task</button>
-        </div>
+       
+  <div style="position: absolute; bottom:1%; margin-left: auto; margin-right: auto; width: 100%; text-align:center;" ng-if="calendar.mode==='month'">
+        
+			<span style="background-color:#323232; color:#ffffff; padding: 5px; margin-bottom: -1%;margin-left: auto; margin-right: auto;"> Tasks for: {{chosen | date:"EEE,d, MMM y"}}</span>
+        
     </div>
 
   </ion-content>
