--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,6 +9,17 @@
 .scroll { 
   min-width: 100%;
 }
+.has-header
+{
+	top:60px !important;
+	margin-top: 20px;
+	position: fixed;
+	z-index: -10;
+}
+.textarea
+{
+  width: 100%;
+}
 .bar.bar-loading {
   display: block;
   height: 24px;
@@ -33,37 +44,7 @@
  * might not always look good, but looks
  * good when our loader is added & removed
  */
-.has-header {
-  -webkit-transition: 200ms top;
-}
-.has-header.has-loading {
-  /* 44px (header) + 24px */
-  top: 68px;
-}
 
-/* make loading bar slide up/down */
-.bar-loading.ng-enter,
-.bar-loading.ng-leave.ng-leave-active {
-  height: 0;
-  border-width: 0px;
-}
-.bar-loading.ng-enter.ng-enter-active,
-.bar-loading.ng-leave {
-  height: 24px;
-  border-width: 1px;
-}
-.slider {
-  height: 100% ;
-}
-.slider-slide {
-  padding-top: 80px;
-  color: #000;
-  background-color: #fff;
-  text-align: center;
-  width:media-width;
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
-  font-weight: 300;
-}
 
 
 #list {
