--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -11,7 +11,7 @@
             <button class="button" ng-click="changeMode('month')">M</button>
             <button class="button" ng-click="changeMode('week')">W</button>
             <button class="button" ng-click="changeMode('day')">D</button>
-            <button class="button" ng-click="addevent(selectedTime);">+ Add New Task</button>
+            <button class="button" ng-click="addevent(selectedTime);"><i class="icon ion-android-add-circle"></i> Add New Task</button>
         </ion-nav-buttons>
 <div style="text-align: center; margin-top: 50px;"><h4>{{viewTitle}}</h4>
        
