--- a/www/templates/usercalendar.html
+++ b/www/templates/usercalendar.html
@@ -5,17 +5,18 @@
 
 
 
-<ion-view view-title="{{viewTitle}}" cache-view="false" hideBackButton ="true">
+<ion-view view-title="{{userName}}" cache-view="false" hideBackButton ="true">
  <ion-nav-buttons side="right">
             <button class="button" ng-disabled="isToday()" ng-click="today()">Today</button>
             <button class="button" ng-click="changeMode('month')">M</button>
             <button class="button" ng-click="changeMode('week')">W</button>
             <button class="button" ng-click="changeMode('day')">D</button>
-            <button class="button" ng-click="addevent(selectedTime);"><i class="icon ion-android-add-circle"></i> Add New Task</button>
+            <button class="button" ng-click="addevent(selectedTime,user);"><i class="icon ion-android-add-circle"></i> Add New Task</button>
         </ion-nav-buttons>
-<div class="bar bar-subheader">
-        <h2 class="title">{{viewTitle}}</h2>
+        <div class="bar bar-subheader">
+        <h3 class="title"><img src="{{userPic}}" class="thumbnails1" style="width: 50%;"> {{userName}}- {{viewTitle}}</h3>
        </div>
+
         <ion-content scroll="false" class="main-content"> 
          
 <calendar ng-model="calendar.currentDate" calendar-mode="calendar.mode" event-source="calendar.eventSource"
@@ -28,9 +29,11 @@
 			<span style="background-color:#323232; color:#ffffff; padding: 5px; margin-bottom: -1%;margin-left: auto; margin-right: auto;"> Tasks for: {{chosen | date:"EEE,d, MMM y"}}</span>
         
     </div>
-
-   
-
+     <div style="position: absolute; top:-10%; margin-left: auto; margin-right: auto; width: 100%; text-align:right;">
+        
+      <span style="background-color:#323232; color:#ffffff; padding: 5px; margin-bottom: -1%;margin-left: auto; margin-right: auto;"> {{userName}}</span>
+        
+    </div>
 
   </ion-content>
 </ion-view>
