--- a/www/css/style.css
+++ b/www/css/style.css
@@ -11,8 +11,8 @@
 }
 .has-header
 {
-	top:60px !important;
-	margin-top: 20px;
+	top:70px !important;
+	margin-top: 25px;
 	position: fixed;
 	z-index: -10;
 }
@@ -27,6 +27,12 @@
   border-radius: 50%;
   width: 100%;
   max-width: 30px;
+}
+.profilepic
+{
+  border-radius: 50%;
+  width: 100%;
+  max-width: 120px;
 }
 .textarea
 {
