--- a/www/templates/adduser.html
+++ b/www/templates/adduser.html
@@ -1,4 +1,9 @@
 <ion-view view-title="Add New User">
+  <ion-nav-bar class="bar-balanced">
+     <ion-nav-buttons side="left">
+            <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
+            </button>
+  </ion-nav-bar>
   <ion-content>
     <!-- Logo -->
     <div class="padding text-center">
