--- a/www/css/style.css
+++ b/www/css/style.css
@@ -21,18 +21,21 @@
   border-radius: 50%;
   width: 100%;
   max-width: 50px;
+  max-height: 50px.
 }
 .thumbnails1
 {
   border-radius: 50%;
   width: 100%;
   max-width: 30px;
+  max-height: 30px;
 }
 .profilepic
 {
   border-radius: 50%;
   width: 100%;
   max-width: 120px;
+  max-height: 120px;
 }
 .textarea
 {
