--- a/www/templates/users.html
+++ b/www/templates/users.html
@@ -10,6 +10,12 @@
             <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
             </button>
   </ion-nav-bar>
+  <ion-nav-buttons side="right">
+            
+            <button class="button" ng-click="refresh()"><i class="icon ion-refresh"></i>  Refresh </button>
+           
+          
+        </ion-nav-buttons>
   <ion-content>
     <div class="list notifications-list">
       <div class="item no-border" ng-repeat="user in users">
