--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -34,7 +34,7 @@
     <!-- Other links -->
     <div class="padding row">
       <div class="col">
-        <a class="light" ui-sref="forgot">Forgot password?</a>
+        <span class="light">Forgot password?</span>
       </div>
       <div class="col">
         <a ui-sref="register" class="light">New here? Sign up</a>
