--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -42,7 +42,7 @@
     <!-- Other links -->
     <div class="padding row">
       <div class="col">
-        <span class="light">&nbsp;</span>
+        <span class="light">Forgot password?</span>
       </div>
       <div class="col">
         <a ui-sref="login" class="light">Have account? Login</a>
