--- a/www/templates/notifications.html
+++ b/www/templates/notifications.html
@@ -4,7 +4,7 @@
   The NotificationsCtrl pulls data from the Notifications service (service.js)
   The Notifications service returns an array of notifications data
 -->
-<ion-view view-title="Notifications" cache-view="false">
+<ion-view view-title="Notifications">
   <ion-nav-bar class="bar-balanced">
      <ion-nav-buttons side="left">
             <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
