--- a/www/templates/editevent.html
+++ b/www/templates/editevent.html
@@ -3,6 +3,9 @@
   'posts' is a $scope variable come from Home controller
 -->
 <ion-view view-title="Edit Task">
+  <ion-nav-buttons side="right">
+            <button class="button" ng-click="deleteEvent(data);"><i class="icon ion-trash-a"></i></button>
+        </ion-nav-buttons>
   <ion-content>
   <form name="editevent">
   <ion-list>
