--- a/www/templates/editadminevent.html
+++ b/www/templates/editadminevent.html
@@ -3,6 +3,9 @@
   'posts' is a $scope variable come from Home controller
 -->
 <ion-view view-title="Edit Task">
+   <ion-nav-buttons side="right">
+            <button class="button" ng-click="deleteEvent(data);"><i class="icon ion-trash-a"></i></button>
+        </ion-nav-buttons>
   <ion-nav-bar class="bar-balanced">
      <ion-nav-buttons side="left">
             <button class="button button-icon button-clear ion-navicon" menu-toggle="left">
